--- a/29-html5_css3.html
+++ b/29-html5_css3.html
@@ -33,7 +33,7 @@
                     <li><a target="_blank" href="syllabus_css.pdf" title="Syllabus Règles de styles">CSS</a> <i class="fa fa-file-pdf-o"></i></li>
                     <li><a target="_blank" href="https://sway.com/HtlMTcHDq6cjN6gh?ref=Link" title="Sway Mémo CSS">Mémo CSS</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li>
                     <li><a target="_blank" href="https://www.w3schools.com/css/exercise.asp?filename=exercise_syntax1" title="Exercices CSS en ligne">Les règles CSS : exercices en ligne</a> <img src="../images/W3C®_Icon.png" alt="Copyright : Logo W3C"> </li>
-                    <li><a target="_blank" href="../index.html" title="Le site des créateurs de drônes ©Fobagra"><strong>Objectif</strong> : site perso</a></li>
+                    <li><a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html" title="Le site des créateurs de drônes ©Fobagra"><strong>Objectif</strong> : site perso</a></li>
                     <li><a target="_blank" href="https://sway.com/0UIfsMBeZMNn1gIJ?ref=Link" title="Sway pi drone">Pi drone</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li> 
 
                     <li><a target="_blank" href="https://sway.com/IGED7OyZFanaHLqO?ref=Link" title="Sway Media Queries">Media Queries</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li> 
@@ -93,8 +93,8 @@
             </article>
             <article class="clearfix">
                 <h3>Séance 4</h3>
-                <h4>Tp : <a target="_blank" href="../index.html">Site</a></h4>
-                <p>  <img src="../images/obj.jpg" alt='Objectif site web'> Création du site objectif. Code HTML5 de base collaborative team coding. Code CSS3.
+                <h4>Tp : <a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html">Site</a></h4>
+                <p>  <img src="https://inani27.github.io/Pi_Dr-ne/images/obj.jpg" alt='Objectif site web'> Création du site objectif. Code HTML5 de base collaborative team coding. Code CSS3.
                 <h5>Notions théoriques : </h5>
                 <p>Balises semantiques ;   block - inline ; flux de contenu</p>
 
