--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ Settings
 
                 <h5> Notions théoriques : </h5>
                 <p>URL relative et URL absolue ; Chemin et arborescence</p>
-                <p></p>
-                <p></p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
             </article>
             <article class="clearfix">
                 <h3>Séance 4</h3>
