--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Settings
 
                 <h5> Notions théoriques : </h5>
                 <p>URL relative et URL absolue ; Chemin et arborescence</p>
+                <p>&nbsp;</p> 
                 <p>&nbsp;</p>
             </article>
             <article class="clearfix">
