--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="web, html, css, html5, css3, media queries, responsive design, semantique, ">
         <meta name="author" content="INani©FOBAGRA-2018">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../styles/reset.css">
+        <link rel="stylesheet" href="https://inani27.github.io/Pi_Dr-ne/styles/reset.css">
         <link rel="stylesheet" href="29-html5_css3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
@@ -16,26 +16,67 @@
     <body>
         <header>
 
-            <a href="./" title="ROOT : 29-HTML_CSS"><img src="https://avatars3.githubusercontent.com/u/11973959?s=460&v=4" alt="Votre formatrice : Isabelle NANI" /></a>
-            <h1>Formation d'initiation aux langages web: <span title="HyperText Markup Language">HTML</span> et <span title="Cascading Style Sheets">CSS</span></h1>
+            <a href="./" title="ROOT : 29-HTML_CSS">
+                <img src="https://avatars3.githubusercontent.com/u/11973959?s=460&v=4" alt="Votre formatrice : Isabelle NANI" />
+            </a>
+            <h1>Formation d'initiation aux langages web: 
+                <span title="HyperText Markup Language">HTML</span> et 
+                <span title="Cascading Style Sheets">CSS</span>
+            </h1>
 
             <h2>Supports de cours : </h2>
             <nav>
                 <ul>
-                    <li><a target="_blank" href="comment_fonctionnent_les_sites_web.pdf" title="Syllabus HTML">Le WEB c'est quoi?</a> <i class="fa fa-file-pdf-o"></i></li>
-                    <li><a target="_blank" href="exercices_html.pdf" title="TP html tags">Les balises HTML : exercices pratiques</a> <i class="fa fa-file-pdf-o"></i></li>
-                    <li><a target="_blank" href="html5.pdf" title="TP HTML5 semantic"> Mini site</a> <i class="fa fa-file-pdf-o"></i></li>
-                    <li><a target="_blank" href="zen_garden/index-no.html" title="The beauty of CSS Design ©Zen Garden">Le site Zen Garden sans CSS</a> 
-                        & <a target="_blank" href="zen_garden/index.html" title="The beauty of CSS Design ©Zen Garden">Le site Zen Garden avec CSS</a> 
+                    <li>
+                        <a target="_blank" href="comment_fonctionnent_les_sites_web.pdf" title="Syllabus HTML">Le WEB c'est quoi?</a>
+                        <i class="fa fa-file-pdf-o"></i>
                     </li>
-                    <li><a target="_blank" href="comment_fonctionnent_les_sites_web.pdf#page=13" title="Syllabus attributs HTML">Les attributs</a> <i class="fa fa-file-pdf-o"></i></li>
-                    <li><a target="_blank" href="syllabus_css.pdf" title="Syllabus Règles de styles">CSS</a> <i class="fa fa-file-pdf-o"></i></li>
-                    <li><a target="_blank" href="https://sway.com/HtlMTcHDq6cjN6gh?ref=Link" title="Sway Mémo CSS">Mémo CSS</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li>
-                    <li><a target="_blank" href="https://www.w3schools.com/css/exercise.asp?filename=exercise_syntax1" title="Exercices CSS en ligne">Les règles CSS : exercices en ligne</a> <img src="../images/W3C®_Icon.png" alt="Copyright : Logo W3C"> </li>
-                    <li><a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html" title="Le site des créateurs de drônes ©Fobagra"><strong>Objectif</strong> : site perso</a></li>
-                    <li><a target="_blank" href="https://sway.com/0UIfsMBeZMNn1gIJ?ref=Link" title="Sway pi drone">Pi drone</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li> 
+                    <li>
+                        <a target="_blank" href="exercices_html.pdf" title="TP html tags">Les balises HTML : exercices pratiques</a>
+                        <i class="fa fa-file-pdf-o"></i>
+                    </li>
+                    <li>
+                        <a target="_blank" href="html5.pdf" title="TP HTML5 semantic"> Mini site</a> 
+                        <i class="fa fa-file-pdf-o"></i>
+                    </li>
+                    <li>
+                        <a target="_blank" href="zen_garden/index-no.html" title="The beauty of CSS Design ©Zen Garden">Le site Zen Garden sans CSS</a> 
 
-                    <li><a target="_blank" href="https://sway.com/IGED7OyZFanaHLqO?ref=Link" title="Sway Media Queries">Media Queries</a> <img src="../images/sway_logo.svg.png" alt="Sway icon"></li> 
+                        & <a target="_blank" href="zen_garden/index.html" title="The beauty of CSS Design ©Zen Garden">Le site Zen Garden avec CSS</a> 
+
+                    </li>
+                    <li>
+                        <a target="_blank" href="comment_fonctionnent_les_sites_web.pdf#page=13" title="Syllabus attributs HTML">Les attributs</a> 
+                        <i class="fa fa-file-pdf-o"></i>
+                    </li>
+                    <li>
+                        <a target="_blank" href="syllabus_css.pdf" title="Syllabus Règles de styles">CSS</a> 
+                        <i class="fa fa-file-pdf-o"></i>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://sway.com/HtlMTcHDq6cjN6gh?ref=Link" title="Sway Mémo CSS">Mémo CSS</a> 
+                        <img src="https://inani27.github.io/Pi_Dr-ne/images/sway_logo.svg.png" alt="Sway icon">
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.w3schools.com/css/exercise.asp?filename=exercise_syntax1" 
+                           title="Exercices CSS en ligne">Les règles CSS : exercices en ligne</a> 
+                        <img src="https://inani27.github.io/Pi_Dr-ne/images/W3C®_Icon.png" alt="Copyright : Logo W3C"> 
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html" title="Le site des créateurs de drônes ©Fobagra">
+                            <strong>Objectif</strong>
+                            : site perso
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://sway.com/0UIfsMBeZMNn1gIJ?ref=Link" title="Sway pi drone">Pi drone</a> 
+                        <img src="https://inani27.github.io/Pi_Dr-ne/images/sway_logo.svg.png" alt="Sway icon">
+                    </li> 
+
+                    <li>
+                        <a target="_blank" href="https://sway.com/IGED7OyZFanaHLqO?ref=Link" title="Sway Media Queries">Media Queries</a> 
+                        <img src="https://inani27.github.io/Pi_Dr-ne/images/sway_logo.svg.png" alt="Sway icon">
+                    </li> 
 
 
                     <!-- <li><a target="_blank" href="" title=""></a></li> -->
@@ -43,7 +84,7 @@
             </nav>
             <h2>Exercices résolus : </h2>
             <p><a href='www/'>Dossier www</a></p>
-            <p> <a href='www/index.html'>Fichiers</A> n°<br/>
+            <p> <a href='www/index.html'>Fichiers</a> n°<br/>
                 1->10 : balises principales <br />
                 11->12 : pages html liées<br />
                 13->17 : styles css<br />
@@ -87,13 +128,19 @@
 
                 <h5> Notions théoriques : </h5>
                 <p>URL relative et URL absolue ; Chemin et arborescence</p>
-                <p>&nbsp;</p> 
-                <p>&nbsp;</p>
+                <p></p>
+
             </article>
             <article class="clearfix">
                 <h3>Séance 4</h3>
-                <h4>Tp : <a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html">Site</a></h4>
-                <p>  <img src="https://inani27.github.io/Pi_Dr-ne/images/obj.jpg" alt='Objectif site web'> Création du site objectif. Code HTML5 de base collaborative team coding. Code CSS3.
+                <h4>
+                    Tp : 
+                    <a target="_blank" href="https://inani27.github.io/Pi_Dr-ne/index.html">Site</a>
+                </h4>
+                <p>  
+                    <img src="https://inani27.github.io/Pi_Dr-ne/images/obj.jpg" alt='Objectif site web'> 
+                    Création du site objectif. Code HTML5 de base collaborative team coding. Code CSS3.
+                </p>
                 <h5>Notions théoriques : </h5>
                 <p>Balises semantiques ;   block - inline ; flux de contenu</p>
 
@@ -121,7 +168,10 @@
                 <h3>Séance 6 </h3>
                 <p>   Media querries</p>
                 <h4>   TP Timeline: Suivre un tuto en ligne</h4>
-                <p>      W3schools: Integration step by step HTML et CSS ext. Custom css charte graphique site by F12 inspect élément analyse dev HTML et CSS.</p>
+                <p>      
+                    W3schools: Integration step by step HTML et CSS ext. 
+                    Custom css charte graphique site by F12 inspect élément analyse dev HTML et CSS.
+                </p>
             </article>
 
             <article>
@@ -129,8 +179,11 @@
 
 
                 <ul>
-                    <li><a target="_blank" href="comment_fonctionnent_les_sites_web.pdf">Comment fonctionnent les sites WEB ?</a></li>
-                    <li>Les langages WEB interprétés par les navigateurs
+                    <li>
+                        <a target="_blank" href="comment_fonctionnent_les_sites_web.pdf">Comment fonctionnent les sites WEB ?</a>
+                    </li>
+                    <li>
+                        Les langages WEB interprétés par les navigateurs
                         <ul>
                             <li>HTML
                                 <ul>
@@ -147,7 +200,11 @@
                                                             <li>desc</li>
                                                             <li>key</li>
                                                             <li>author</li>
-                                                            <li><a lang="EN" target="_blank" href="https://www.w3schools.com/css/css_rwd_viewport.asp">viewport</a></li>
+                                                            <li>
+                                                                <a lang="EN" target="_blank" 
+                                                                   href="https://www.w3schools.com/css/css_rwd_viewport.asp">viewport
+                                                                </a>
+                                                            </li>
                                                         </ul>
                                                     </li>
                                                 </ul>
@@ -214,18 +271,29 @@
                             </li>
                             <li>CSS3
                                 <ul>
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/cssref/css3_pr_border-radius.asp">border-radius</a></li>
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp">media queries</a></li>
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/cssref/css3_pr_border-radius.asp">border-radius</a>
+                                    </li>
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp">media queries</a>
+                                    </li>
                                     <li>
                                         ...
                                     </li>
 
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_transitions.asp">transition</a>, 
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_transitions.asp">transition</a>, 
                                         <a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_animations.asp">animation</a>
                                     </li>
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_shadows.asp">shadow</a></li>
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_gradients.asp">gradient</a></li>
-                                    <li><a lang="EN" target="_blank" href="https://www.w3schools.com/cssref/css3_pr_font-face_rule.asp">@font-face</a></li>
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_shadows.asp">shadow</a>
+                                    </li>
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/css/css3_gradients.asp">gradient</a>
+                                    </li>
+                                    <li>
+                                        <a lang="EN" target="_blank" href="https://www.w3schools.com/cssref/css3_pr_font-face_rule.asp">@font-face</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -317,7 +385,9 @@
                     </li>
                 </ul>
             </aside>
-            <p style="text-align: right; background-color: white; color:teal; ">&copy; FOBAGRA 2018 - Formatrice : Isabelle NANI</p>
+            <p style="text-align: right; background-color: white; color:teal; ">
+                &copy; FOBAGRA 2018 - Formatrice : Isabelle NANI
+            </p>
         </footer>
     </body>
 </html>
